# drill

./: ANALISI_REFACTORING.md  Cargo.toml  README.md  build-macos.sh  build.rs
.github/instructions/: rust.instructions.md
.github/workflows/: macos-release.yml  release.yml  windows-release.yml
graphics/: SHMECTOR.COM - Collection of tool stickers.url  icon.ai
resources/: Info.plist  icon.icns
src/: about.rs  app.rs  config.rs  error.rs  logs.rs  main.rs  notifications.rs  systemtray.rs  tunnels.rs
src/panels/: about.rs  create_tunnel.rs  mod.rs
src/windows/: about.rs  create_tunnel.rs  mod.rs
