[package]
name = "drill"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A multi-platform application for macOS, Windows, and Linux"
license = "MIT OR Apache-2.0"

[package.metadata.packager]
product-name = "Drill"
identifier = "com.drill.app"
category = "DeveloperTool"
copyright = "Copyright (c) 2025. All rights reserved."
before-packaging-command = "cargo build --release"
out-dir = "target/release/bundle"

[package.metadata.packager.macos]
minimum-system-version = "10.13"
info-plist-path = "resources/Info.plist"

[dependencies]
# Cross-platform system information
sysinfo = "0.32"

# Cross-platform paths and directories
dirs = "5.0"

# Command line argument parsing
clap = { version = "4.5", features = ["derive"] }

# Date and time
chrono = "0.4"

# System tray icon
tray-icon = "0.19"

# GUI framework - multi-window support
iced = { version = "0.13", features = ["tokio", "multi-window"] }

# Tokio async runtime
tokio = { version = "1.48", features = ["time"] }

# YAML serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# File dialogs
rfd = "0.15"

# Cross-platform desktop notifications
notify-rust = "4"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS specific dependencies
mac-notification-sys = "0.6.9"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows specific dependencies

[target.'cfg(target_os = "linux")'.dependencies]
# Linux specific dependencies

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "drill"
path = "src/main.rs"
